--- a/Core/composer.json
+++ b/Core/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "cobra/inpage",
-    "description": "Cobra inpage package",
+    "name": "cobra/core",
+    "description": "Cobra core package",
     "homepage": "https://php.fyi",
     "license": "MIT",
     "authors": [
@@ -13,7 +13,8 @@
         "issues": "https://github.com/phpfyi/cobra/issues"
     },
     "keywords": [
-        "inpage",
+        "core",
+        "framework",
         "php"
     ],
     "require": {
