--- a/Environment/composer.json
+++ b/Environment/composer.json
@@ -25,7 +25,7 @@
             "src/"
         ],
         "files": [
-            "_functions.php"
+            "package.php"
         ]
     },
     "minimum-stability": "dev",
