--- a/Interfaces/composer.json
+++ b/Interfaces/composer.json
@@ -22,6 +22,9 @@
     "autoload": {
         "classmap": [
             "src/"
+        ],
+        "files": [
+            "package.php"
         ]
     },
     "minimum-stability": "dev",
