--- a/Auth/_config/user-log.yml
+++ b/Auth/_config/user-log.yml
@@ -8,4 +8,4 @@ Cobra\Auth\User\UserLog:
     - [10, 'tableDate', 'Created']
     - [25, 'action', 'Action']
     - [25, 'result', 'Result']
-    - [25, 'ip', 'IP']
+    - [25, 'ip_address', 'IP']
