move password min and max config to YAML

--- a/Auth/_config/password.yml
+++ b/Auth/_config/password.yml
@@ -3,3 +3,6 @@ Cobra\Auth\Password\Password:
     - [5, 'id', 'ID']
     - [10, 'tableDate', 'Created']
     - [75, 'password', 'password']
+Cobra\Auth\Validator\PasswordValidator:
+  min_chars: 8
+  max_chars: 20
