--- a/Asset/_config/routes.yml
+++ b/Asset/_config/routes.yml
@@ -1,3 +1,14 @@
 routes:
   - path: '/assets/.*'
     controller: 'Cobra\Asset\Controller\AssetController'
+
+  - path: '/upload'
+    guards: 
+      - 'Cobra\Asset\Guard\UploadGuard'
+    middleware:
+      - 'Cobra\Http\Middleware\CmsAllowedIpsMiddleware'
+    children:
+      - path: '/add'
+        controller: 'Cobra\Asset\Controller\UploadAddController'
+      - path: '/remove'
+        controller: 'Cobra\Asset\Controller\UploadRemoveController'
