--- a/Asset/_config/routes.yml
+++ b/Asset/_config/routes.yml
@@ -1,14 +1,12 @@
 routes:
-  - path: '/assets/.*'
-    controller: 'Cobra\Asset\Controller\AssetController'
-
+  - { path: '/assets/.*', controller: 'Cobra\Asset\Controller\AssetController' }
   - path: '/upload'
     guards: 
+      - 'Cobra\Routing\Guard\AjaxRouteGuard'
       - 'Cobra\Asset\Guard\UploadGuard'
     middleware:
       - 'Cobra\Http\Middleware\CmsAllowedIpsMiddleware'
     children:
-      - path: '/add'
-        controller: 'Cobra\Asset\Controller\UploadAddController'
-      - path: '/remove'
-        controller: 'Cobra\Asset\Controller\UploadRemoveController'
+      - { path: '/add', controller: 'Cobra\Asset\Controller\UploadAddController' }
+      - { path: '/remove', controller: 'Cobra\Asset\Controller\UploadRemoveController' }
+    
